# Fast_sql-lIbrary

./: README.md  pyproject.toml  requirement.txt  setup.cfg  setup.py
example/: write_and_read_data.py
src/: __init__.py  fast_sql.py
src/example/: write_and_read_data.py
src/example/password admin/: main.py
src/example/password admin/Importants/: database.db
src/test/: test_fast_sql.py
