[command]
option = value
[metadata]
name = fast_sql
version = 0.0.5
author = Farbod Parkhooi(Unknow-per)
author_email = farbod.p1390@gmail.com
description = Fast_sql is a library to use sqlite database faster and easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Unknow-per/Fast_SQL-lIbrary
project_urls =
    Bug Tracker = https://github.com/Unknow-per/Fast_SQL-lIbrary/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src