[command]
option = value
[metadata]
name = fast_api
version = 0.0.5
author = Farbod Parkhooi(Unknow-per)
author_email = farbpd.p1390@gmail.com
description = Fast_sqlite is a library to use sqlite database faster and easier.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Unknow-per/Fast_sqlite-lIbrary
project_urls =
    Bug Tracker = https://github.com/Unknow-per/Fast_sqlite-lIbrary/-/issues
    repository = https://github.com/Unknow-per/Fast_sqlite-lIbrary
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src